snappass-project/kubectl/snappass-ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-sv
    annotations:
        kubernetes.io/ingress.class: nginx
    namespace: snappass
spec:
    rules:
    -
        host: snappass.bitcorn.site
        http:
            paths:
            -
                path: /
                backend:
                    serviceName: snappass-main
                    servicePort: 80
            -
                path: /jenkins
                backend:
                    serviceName: jenkins.jenkins
                    servicePort: 8080
